<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnEnfant"
        android:layout_width="388dp"
        android:layout_height="162dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/smiley_enfant"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="23dp" />

    <TextView
        android:id="@+id/enfant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enfant"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnEnfant"
        tools:layout_editor_absoluteX="31dp" />

    <ImageButton
        android:id="@+id/imgBtnParent"
        android:layout_width="376dp"
        android:layout_height="149dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/enfant"
        app:srcCompat="@drawable/smiley_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parent"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnParent"
        tools:layout_editor_absoluteX="-12dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OU BIEN"
        app:layout_constraintBottom_toTopOf="@+id/enfant"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnParent"
        app:layout_constraintVertical_bias="0.455"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="VEUILLER CLIQUER SUR L'IMAGE CORRESPONDANTE, SVP"
        app:layout_constraintBottom_toTopOf="@+id/parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>